<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".DetailsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.02"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.02"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/tv_hello"
        app:layout_constraintStart_toEndOf="@id/tv_hello"
        app:layout_constraintTop_toTopOf="@id/tv_hello"
        tools:text="George1993" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:src="@drawable/iv_guitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/fender_telecaster"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/item_image"
        app:layout_constraintStart_toStartOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/item_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_subtract"
        app:layout_constraintBottom_toBottomOf="@+id/item_count"
        app:layout_constraintEnd_toStartOf="@+id/item_count"
        app:layout_constraintTop_toTopOf="@+id/item_count" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/item_count"
        app:layout_constraintStart_toEndOf="@+id/item_count"
        app:layout_constraintTop_toTopOf="@+id/item_count" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_order"
        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintStart_toStartOf="@id/item_name"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        tools:text="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_yellow_round_shape_accent"
        android:fontFamily="@font/poppins"
        android:padding="18dp"
        android:text="@string/order_now"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>